--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.dsc-finance-open</groupId>
     <artifactId>yama-open-sdk</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <name>yama-open-sdk</name>
     <url>https://github.com/dsc-finance-open/yama-open-sdk</url>
@@ -107,6 +107,9 @@
                         </tag>
                     </tags>
                     <additionalparam>-Xdoclint:none</additionalparam>
+                    <javadocExecutable>
+                        /Library/Java/JavaVirtualMachines/jdk1.8.0_202.jdk/Contents/Home/bin/javadoc
+                    </javadocExecutable>
                 </configuration>
                 <executions>
                     <execution>
