--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.dsc-finance-open</groupId>
     <artifactId>yama-open-sdk</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.5</version>
 
     <name>yama-open-sdk</name>
     <url>https://github.com/dsc-finance-open/yama-open-sdk</url>
